// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch screenshot checked 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.switch {
    display: flex;
    justify-content: space-between;
    flex: 1;
    cursor: pointer;
    user-select: none;

    font-size: var(--switch-font-size);
    line-height: var(--switch-line-height);
}

    .switch_disabled {
        cursor: default;
    }

    .switch_width_auto {
        max-width: max-content;
    }

    .switch_size_s20 {
            --switch-font-size: 14px;
            --switch-line-height: 20px;
            --switch-icon-height: 16px;
            --switch-icon-width: 24px;
        }

    .switch_size_s24 {
            --switch-font-size: 16px;
            --switch-line-height: 24px;
            --switch-icon-height: 20px;
            --switch-icon-width: 32px;
        }

    .switch_size_s26 {
            --switch-font-size: 18px;
            --switch-line-height: 26px;
            --switch-icon-height: 24px;
            --switch-icon-width: 40px;
        }

    .switch__label {
        position: relative;
        color: var(--switch-font-color);
        font-weight: 400;
        word-break: break-word;
        overflow-wrap: anywhere;
        margin-right: var(--space-8);
    }

    .switch_disabled .switch__label {
        color: var(--switch-label-disabled-color);
    }

    .switch__icon {
        position: relative;
        background-color: var(--switch-icon-color);
        display: flex;
        flex: none;
        align-items: center;
        margin: calc((var(--switch-line-height) - var(--switch-icon-height)) / 2) 0;
        padding: 0 var(--space-2);
        transition: background-color 0.1s linear;
        height: var(--switch-icon-height);
        width: var(--switch-icon-width);
        border-radius: calc(var(--switch-icon-width) / 2);
    }

    .switch__icon_checked {
            background-color: var(--switch-icon-checked-color);
        }

    .switch:hover:not(.switch_disabled) .switch__icon {
        background-color: var(--switch-icon-hover-color);
    }

    .switch:hover:not(.switch_disabled) .switch__icon_checked {
        background-color: var(--switch-icon-checked-hover-color);
    }

    .switch__icon-circle {
        background-color: var(--switch-icon-circle-color);
        transition: 0.1s ease-out;
        transition-property: transform, width;

        --switch-icon-circle-size: calc(var(--switch-icon-width) / 2);
        width: var(--switch-icon-circle-size);
        height: var(--switch-icon-circle-size);
        border-radius: calc(var(--switch-icon-circle-size) / 2);
    }

    .switch:not(.switch_disabled) .switch__icon:active .switch__icon-circle {
        width: calc(var(--switch-icon-circle-size) + 2px);
    }

    .switch__icon_checked .switch__icon-circle {
        transform: translateX(calc(var(--switch-icon-width) - 100%));
    }

    .switch_disabled .switch__icon {
        background-color: var(--switch-icon-disabled-color);
    }

    .switch__input {
        position: absolute;
        opacity: 0;
        width: 0;
        height: 0;
    }

    .switch__input:focus-visible ~ .switch__icon {
        box-shadow: var(--shdw-el-focused);
    }

    .switch__icon-left,
    .switch__icon-right {
        position: absolute;
        pointer-events: none;
        display: flex;
        top: 0;
        bottom: 0;
        align-items: center;
        justify-content: center;
        width: 50%;
        color: var(--switch-icon-sides-color);
    }

    .switch__icon-left {
        left: 1px;
    }

    .switch__icon-right {
        right: 1px;
    }
.switch_theme_default {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-yellow-100);
    --switch-icon-checked-hover-color: var(--clr-el-yellow-200);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.switch_theme_pseudo {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-gray-030);
    --switch-icon-checked-hover-color: var(--clr-el-gray-040);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">isChecked: true</div><div class=\\"multi-story__item-component\\"><div style=\\"max-width:400px\\"><label class=\\"switch switch_width_auto switch_size_s24 switch_theme_default\\"><span class=\\"switch__label\\">Switch</span><input type=\\"checkbox\\" class=\\"switch__input\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">isChecked: false</div><div class=\\"multi-story__item-component\\"><div style=\\"max-width:400px\\"><label class=\\"switch switch_width_auto switch_size_s24 switch_theme_default\\"><span class=\\"switch__label\\">Switch</span><input type=\\"checkbox\\" class=\\"switch__input\\"/><div class=\\"switch__icon\\"><div class=\\"switch__icon-circle\\"></div></div></label></div></div></div></div></div></div>"
`;

exports[`Switch screenshot disabled 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.switch {
    display: flex;
    justify-content: space-between;
    flex: 1;
    cursor: pointer;
    user-select: none;

    font-size: var(--switch-font-size);
    line-height: var(--switch-line-height);
}

    .switch_disabled {
        cursor: default;
    }

    .switch_width_auto {
        max-width: max-content;
    }

    .switch_size_s20 {
            --switch-font-size: 14px;
            --switch-line-height: 20px;
            --switch-icon-height: 16px;
            --switch-icon-width: 24px;
        }

    .switch_size_s24 {
            --switch-font-size: 16px;
            --switch-line-height: 24px;
            --switch-icon-height: 20px;
            --switch-icon-width: 32px;
        }

    .switch_size_s26 {
            --switch-font-size: 18px;
            --switch-line-height: 26px;
            --switch-icon-height: 24px;
            --switch-icon-width: 40px;
        }

    .switch__label {
        position: relative;
        color: var(--switch-font-color);
        font-weight: 400;
        word-break: break-word;
        overflow-wrap: anywhere;
        margin-right: var(--space-8);
    }

    .switch_disabled .switch__label {
        color: var(--switch-label-disabled-color);
    }

    .switch__icon {
        position: relative;
        background-color: var(--switch-icon-color);
        display: flex;
        flex: none;
        align-items: center;
        margin: calc((var(--switch-line-height) - var(--switch-icon-height)) / 2) 0;
        padding: 0 var(--space-2);
        transition: background-color 0.1s linear;
        height: var(--switch-icon-height);
        width: var(--switch-icon-width);
        border-radius: calc(var(--switch-icon-width) / 2);
    }

    .switch__icon_checked {
            background-color: var(--switch-icon-checked-color);
        }

    .switch:hover:not(.switch_disabled) .switch__icon {
        background-color: var(--switch-icon-hover-color);
    }

    .switch:hover:not(.switch_disabled) .switch__icon_checked {
        background-color: var(--switch-icon-checked-hover-color);
    }

    .switch__icon-circle {
        background-color: var(--switch-icon-circle-color);
        transition: 0.1s ease-out;
        transition-property: transform, width;

        --switch-icon-circle-size: calc(var(--switch-icon-width) / 2);
        width: var(--switch-icon-circle-size);
        height: var(--switch-icon-circle-size);
        border-radius: calc(var(--switch-icon-circle-size) / 2);
    }

    .switch:not(.switch_disabled) .switch__icon:active .switch__icon-circle {
        width: calc(var(--switch-icon-circle-size) + 2px);
    }

    .switch__icon_checked .switch__icon-circle {
        transform: translateX(calc(var(--switch-icon-width) - 100%));
    }

    .switch_disabled .switch__icon {
        background-color: var(--switch-icon-disabled-color);
    }

    .switch__input {
        position: absolute;
        opacity: 0;
        width: 0;
        height: 0;
    }

    .switch__input:focus-visible ~ .switch__icon {
        box-shadow: var(--shdw-el-focused);
    }

    .switch__icon-left,
    .switch__icon-right {
        position: absolute;
        pointer-events: none;
        display: flex;
        top: 0;
        bottom: 0;
        align-items: center;
        justify-content: center;
        width: 50%;
        color: var(--switch-icon-sides-color);
    }

    .switch__icon-left {
        left: 1px;
    }

    .switch__icon-right {
        right: 1px;
    }
.switch_theme_default {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-yellow-100);
    --switch-icon-checked-hover-color: var(--clr-el-yellow-200);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.switch_theme_pseudo {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-gray-030);
    --switch-icon-checked-hover-color: var(--clr-el-gray-040);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div style=\\"max-width:400px\\"><label class=\\"switch switch_disabled switch_width_auto switch_size_s24 switch_theme_default\\"><span class=\\"switch__label\\">Switch</span><input type=\\"checkbox\\" class=\\"switch__input\\" disabled=\\"\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div>"
`;

exports[`Switch screenshot max width 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.switch {
    display: flex;
    justify-content: space-between;
    flex: 1;
    cursor: pointer;
    user-select: none;

    font-size: var(--switch-font-size);
    line-height: var(--switch-line-height);
}

    .switch_disabled {
        cursor: default;
    }

    .switch_width_auto {
        max-width: max-content;
    }

    .switch_size_s20 {
            --switch-font-size: 14px;
            --switch-line-height: 20px;
            --switch-icon-height: 16px;
            --switch-icon-width: 24px;
        }

    .switch_size_s24 {
            --switch-font-size: 16px;
            --switch-line-height: 24px;
            --switch-icon-height: 20px;
            --switch-icon-width: 32px;
        }

    .switch_size_s26 {
            --switch-font-size: 18px;
            --switch-line-height: 26px;
            --switch-icon-height: 24px;
            --switch-icon-width: 40px;
        }

    .switch__label {
        position: relative;
        color: var(--switch-font-color);
        font-weight: 400;
        word-break: break-word;
        overflow-wrap: anywhere;
        margin-right: var(--space-8);
    }

    .switch_disabled .switch__label {
        color: var(--switch-label-disabled-color);
    }

    .switch__icon {
        position: relative;
        background-color: var(--switch-icon-color);
        display: flex;
        flex: none;
        align-items: center;
        margin: calc((var(--switch-line-height) - var(--switch-icon-height)) / 2) 0;
        padding: 0 var(--space-2);
        transition: background-color 0.1s linear;
        height: var(--switch-icon-height);
        width: var(--switch-icon-width);
        border-radius: calc(var(--switch-icon-width) / 2);
    }

    .switch__icon_checked {
            background-color: var(--switch-icon-checked-color);
        }

    .switch:hover:not(.switch_disabled) .switch__icon {
        background-color: var(--switch-icon-hover-color);
    }

    .switch:hover:not(.switch_disabled) .switch__icon_checked {
        background-color: var(--switch-icon-checked-hover-color);
    }

    .switch__icon-circle {
        background-color: var(--switch-icon-circle-color);
        transition: 0.1s ease-out;
        transition-property: transform, width;

        --switch-icon-circle-size: calc(var(--switch-icon-width) / 2);
        width: var(--switch-icon-circle-size);
        height: var(--switch-icon-circle-size);
        border-radius: calc(var(--switch-icon-circle-size) / 2);
    }

    .switch:not(.switch_disabled) .switch__icon:active .switch__icon-circle {
        width: calc(var(--switch-icon-circle-size) + 2px);
    }

    .switch__icon_checked .switch__icon-circle {
        transform: translateX(calc(var(--switch-icon-width) - 100%));
    }

    .switch_disabled .switch__icon {
        background-color: var(--switch-icon-disabled-color);
    }

    .switch__input {
        position: absolute;
        opacity: 0;
        width: 0;
        height: 0;
    }

    .switch__input:focus-visible ~ .switch__icon {
        box-shadow: var(--shdw-el-focused);
    }

    .switch__icon-left,
    .switch__icon-right {
        position: absolute;
        pointer-events: none;
        display: flex;
        top: 0;
        bottom: 0;
        align-items: center;
        justify-content: center;
        width: 50%;
        color: var(--switch-icon-sides-color);
    }

    .switch__icon-left {
        left: 1px;
    }

    .switch__icon-right {
        right: 1px;
    }
.switch_theme_default {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-yellow-100);
    --switch-icon-checked-hover-color: var(--clr-el-yellow-200);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.switch_theme_pseudo {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-gray-030);
    --switch-icon-checked-hover-color: var(--clr-el-gray-040);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div style=\\"width:400px\\"><div style=\\"max-width:400px\\"><label class=\\"switch switch_width_max switch_size_s24 switch_theme_default\\"><span class=\\"switch__label\\">Switch</span><input type=\\"checkbox\\" class=\\"switch__input\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div></div>"
`;

exports[`Switch screenshot multiline 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.switch {
    display: flex;
    justify-content: space-between;
    flex: 1;
    cursor: pointer;
    user-select: none;

    font-size: var(--switch-font-size);
    line-height: var(--switch-line-height);
}

    .switch_disabled {
        cursor: default;
    }

    .switch_width_auto {
        max-width: max-content;
    }

    .switch_size_s20 {
            --switch-font-size: 14px;
            --switch-line-height: 20px;
            --switch-icon-height: 16px;
            --switch-icon-width: 24px;
        }

    .switch_size_s24 {
            --switch-font-size: 16px;
            --switch-line-height: 24px;
            --switch-icon-height: 20px;
            --switch-icon-width: 32px;
        }

    .switch_size_s26 {
            --switch-font-size: 18px;
            --switch-line-height: 26px;
            --switch-icon-height: 24px;
            --switch-icon-width: 40px;
        }

    .switch__label {
        position: relative;
        color: var(--switch-font-color);
        font-weight: 400;
        word-break: break-word;
        overflow-wrap: anywhere;
        margin-right: var(--space-8);
    }

    .switch_disabled .switch__label {
        color: var(--switch-label-disabled-color);
    }

    .switch__icon {
        position: relative;
        background-color: var(--switch-icon-color);
        display: flex;
        flex: none;
        align-items: center;
        margin: calc((var(--switch-line-height) - var(--switch-icon-height)) / 2) 0;
        padding: 0 var(--space-2);
        transition: background-color 0.1s linear;
        height: var(--switch-icon-height);
        width: var(--switch-icon-width);
        border-radius: calc(var(--switch-icon-width) / 2);
    }

    .switch__icon_checked {
            background-color: var(--switch-icon-checked-color);
        }

    .switch:hover:not(.switch_disabled) .switch__icon {
        background-color: var(--switch-icon-hover-color);
    }

    .switch:hover:not(.switch_disabled) .switch__icon_checked {
        background-color: var(--switch-icon-checked-hover-color);
    }

    .switch__icon-circle {
        background-color: var(--switch-icon-circle-color);
        transition: 0.1s ease-out;
        transition-property: transform, width;

        --switch-icon-circle-size: calc(var(--switch-icon-width) / 2);
        width: var(--switch-icon-circle-size);
        height: var(--switch-icon-circle-size);
        border-radius: calc(var(--switch-icon-circle-size) / 2);
    }

    .switch:not(.switch_disabled) .switch__icon:active .switch__icon-circle {
        width: calc(var(--switch-icon-circle-size) + 2px);
    }

    .switch__icon_checked .switch__icon-circle {
        transform: translateX(calc(var(--switch-icon-width) - 100%));
    }

    .switch_disabled .switch__icon {
        background-color: var(--switch-icon-disabled-color);
    }

    .switch__input {
        position: absolute;
        opacity: 0;
        width: 0;
        height: 0;
    }

    .switch__input:focus-visible ~ .switch__icon {
        box-shadow: var(--shdw-el-focused);
    }

    .switch__icon-left,
    .switch__icon-right {
        position: absolute;
        pointer-events: none;
        display: flex;
        top: 0;
        bottom: 0;
        align-items: center;
        justify-content: center;
        width: 50%;
        color: var(--switch-icon-sides-color);
    }

    .switch__icon-left {
        left: 1px;
    }

    .switch__icon-right {
        right: 1px;
    }
.switch_theme_default {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-yellow-100);
    --switch-icon-checked-hover-color: var(--clr-el-yellow-200);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.switch_theme_pseudo {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-gray-030);
    --switch-icon-checked-hover-color: var(--clr-el-gray-040);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div style=\\"max-width:400px\\"><label class=\\"switch switch_width_auto switch_size_s24 switch_theme_default\\"><span class=\\"switch__label\\">Switch Switch Switch Switch Switch Switch Switch Switch Switch Switch </span><input type=\\"checkbox\\" class=\\"switch__input\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div>"
`;

exports[`Switch screenshot size 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.switch {
    display: flex;
    justify-content: space-between;
    flex: 1;
    cursor: pointer;
    user-select: none;

    font-size: var(--switch-font-size);
    line-height: var(--switch-line-height);
}

    .switch_disabled {
        cursor: default;
    }

    .switch_width_auto {
        max-width: max-content;
    }

    .switch_size_s20 {
            --switch-font-size: 14px;
            --switch-line-height: 20px;
            --switch-icon-height: 16px;
            --switch-icon-width: 24px;
        }

    .switch_size_s24 {
            --switch-font-size: 16px;
            --switch-line-height: 24px;
            --switch-icon-height: 20px;
            --switch-icon-width: 32px;
        }

    .switch_size_s26 {
            --switch-font-size: 18px;
            --switch-line-height: 26px;
            --switch-icon-height: 24px;
            --switch-icon-width: 40px;
        }

    .switch__label {
        position: relative;
        color: var(--switch-font-color);
        font-weight: 400;
        word-break: break-word;
        overflow-wrap: anywhere;
        margin-right: var(--space-8);
    }

    .switch_disabled .switch__label {
        color: var(--switch-label-disabled-color);
    }

    .switch__icon {
        position: relative;
        background-color: var(--switch-icon-color);
        display: flex;
        flex: none;
        align-items: center;
        margin: calc((var(--switch-line-height) - var(--switch-icon-height)) / 2) 0;
        padding: 0 var(--space-2);
        transition: background-color 0.1s linear;
        height: var(--switch-icon-height);
        width: var(--switch-icon-width);
        border-radius: calc(var(--switch-icon-width) / 2);
    }

    .switch__icon_checked {
            background-color: var(--switch-icon-checked-color);
        }

    .switch:hover:not(.switch_disabled) .switch__icon {
        background-color: var(--switch-icon-hover-color);
    }

    .switch:hover:not(.switch_disabled) .switch__icon_checked {
        background-color: var(--switch-icon-checked-hover-color);
    }

    .switch__icon-circle {
        background-color: var(--switch-icon-circle-color);
        transition: 0.1s ease-out;
        transition-property: transform, width;

        --switch-icon-circle-size: calc(var(--switch-icon-width) / 2);
        width: var(--switch-icon-circle-size);
        height: var(--switch-icon-circle-size);
        border-radius: calc(var(--switch-icon-circle-size) / 2);
    }

    .switch:not(.switch_disabled) .switch__icon:active .switch__icon-circle {
        width: calc(var(--switch-icon-circle-size) + 2px);
    }

    .switch__icon_checked .switch__icon-circle {
        transform: translateX(calc(var(--switch-icon-width) - 100%));
    }

    .switch_disabled .switch__icon {
        background-color: var(--switch-icon-disabled-color);
    }

    .switch__input {
        position: absolute;
        opacity: 0;
        width: 0;
        height: 0;
    }

    .switch__input:focus-visible ~ .switch__icon {
        box-shadow: var(--shdw-el-focused);
    }

    .switch__icon-left,
    .switch__icon-right {
        position: absolute;
        pointer-events: none;
        display: flex;
        top: 0;
        bottom: 0;
        align-items: center;
        justify-content: center;
        width: 50%;
        color: var(--switch-icon-sides-color);
    }

    .switch__icon-left {
        left: 1px;
    }

    .switch__icon-right {
        right: 1px;
    }
.switch_theme_default {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-yellow-100);
    --switch-icon-checked-hover-color: var(--clr-el-yellow-200);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.switch_theme_pseudo {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-gray-030);
    --switch-icon-checked-hover-color: var(--clr-el-gray-040);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s20</div><div class=\\"multi-story__item-component\\"><div style=\\"max-width:400px\\"><label class=\\"switch switch_width_auto switch_size_s20 switch_theme_default\\"><span class=\\"switch__label\\">Switch</span><input type=\\"checkbox\\" class=\\"switch__input\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s24</div><div class=\\"multi-story__item-component\\"><div style=\\"max-width:400px\\"><label class=\\"switch switch_width_auto switch_size_s24 switch_theme_default\\"><span class=\\"switch__label\\">Switch</span><input type=\\"checkbox\\" class=\\"switch__input\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s26</div><div class=\\"multi-story__item-component\\"><div style=\\"max-width:400px\\"><label class=\\"switch switch_width_auto switch_size_s26 switch_theme_default\\"><span class=\\"switch__label\\">Switch</span><input type=\\"checkbox\\" class=\\"switch__input\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div></div></div></div></div></div>"
`;

exports[`Switch screenshot without label 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.switch {
    display: flex;
    justify-content: space-between;
    flex: 1;
    cursor: pointer;
    user-select: none;

    font-size: var(--switch-font-size);
    line-height: var(--switch-line-height);
}

    .switch_disabled {
        cursor: default;
    }

    .switch_width_auto {
        max-width: max-content;
    }

    .switch_size_s20 {
            --switch-font-size: 14px;
            --switch-line-height: 20px;
            --switch-icon-height: 16px;
            --switch-icon-width: 24px;
        }

    .switch_size_s24 {
            --switch-font-size: 16px;
            --switch-line-height: 24px;
            --switch-icon-height: 20px;
            --switch-icon-width: 32px;
        }

    .switch_size_s26 {
            --switch-font-size: 18px;
            --switch-line-height: 26px;
            --switch-icon-height: 24px;
            --switch-icon-width: 40px;
        }

    .switch__label {
        position: relative;
        color: var(--switch-font-color);
        font-weight: 400;
        word-break: break-word;
        overflow-wrap: anywhere;
        margin-right: var(--space-8);
    }

    .switch_disabled .switch__label {
        color: var(--switch-label-disabled-color);
    }

    .switch__icon {
        position: relative;
        background-color: var(--switch-icon-color);
        display: flex;
        flex: none;
        align-items: center;
        margin: calc((var(--switch-line-height) - var(--switch-icon-height)) / 2) 0;
        padding: 0 var(--space-2);
        transition: background-color 0.1s linear;
        height: var(--switch-icon-height);
        width: var(--switch-icon-width);
        border-radius: calc(var(--switch-icon-width) / 2);
    }

    .switch__icon_checked {
            background-color: var(--switch-icon-checked-color);
        }

    .switch:hover:not(.switch_disabled) .switch__icon {
        background-color: var(--switch-icon-hover-color);
    }

    .switch:hover:not(.switch_disabled) .switch__icon_checked {
        background-color: var(--switch-icon-checked-hover-color);
    }

    .switch__icon-circle {
        background-color: var(--switch-icon-circle-color);
        transition: 0.1s ease-out;
        transition-property: transform, width;

        --switch-icon-circle-size: calc(var(--switch-icon-width) / 2);
        width: var(--switch-icon-circle-size);
        height: var(--switch-icon-circle-size);
        border-radius: calc(var(--switch-icon-circle-size) / 2);
    }

    .switch:not(.switch_disabled) .switch__icon:active .switch__icon-circle {
        width: calc(var(--switch-icon-circle-size) + 2px);
    }

    .switch__icon_checked .switch__icon-circle {
        transform: translateX(calc(var(--switch-icon-width) - 100%));
    }

    .switch_disabled .switch__icon {
        background-color: var(--switch-icon-disabled-color);
    }

    .switch__input {
        position: absolute;
        opacity: 0;
        width: 0;
        height: 0;
    }

    .switch__input:focus-visible ~ .switch__icon {
        box-shadow: var(--shdw-el-focused);
    }

    .switch__icon-left,
    .switch__icon-right {
        position: absolute;
        pointer-events: none;
        display: flex;
        top: 0;
        bottom: 0;
        align-items: center;
        justify-content: center;
        width: 50%;
        color: var(--switch-icon-sides-color);
    }

    .switch__icon-left {
        left: 1px;
    }

    .switch__icon-right {
        right: 1px;
    }
.switch_theme_default {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-yellow-100);
    --switch-icon-checked-hover-color: var(--clr-el-yellow-200);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.switch_theme_pseudo {
    --switch-font-color: var(--clr-el-gray-080);
    --switch-label-disabled-color: var(--clr-el-gray-050);

    --switch-icon-color: var(--clr-el-gray-030);
    --switch-icon-hover-color: var(--clr-el-gray-040);

    --switch-icon-disabled-color: var(--clr-el-gray-015);
    --switch-icon-focus-visible-color: var(--clr-el-yellow-100);

    --switch-icon-checked-color: var(--clr-el-gray-030);
    --switch-icon-checked-hover-color: var(--clr-el-gray-040);

    --switch-icon-circle-color: var(--clr-bg-gray-1);

    --switch-icon-sides-color: var(--clr-el-gray-070);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div style=\\"max-width:400px\\"><label class=\\"switch switch_width_auto switch_size_s24 switch_theme_default\\"><input type=\\"checkbox\\" class=\\"switch__input\\" checked=\\"\\"/><div class=\\"switch__icon switch__icon_checked\\"><div class=\\"switch__icon-circle\\"></div></div></label></div>"
`;
